--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connected-react-router": "^6.9.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.18.2",
     "mysql2": "^2.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.10.0",
+    "redux": "^4.2.1",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
