--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.5",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
   },
