--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.2.5",
-    "nodemailer": "6.6.3",
+    "nodemailer": "^6.9.1",
     "sequelize": "^6.6.2",
-    "uuid": "8.3.2",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
