--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT = 8088
 NODE_ENV = development
 URL_REACT = http://localhost:3000
 MAX_NUMBER_SCHEDULE = 10
-EMAIL_APP_PASSWORD=zvrownewprriokhm
-EMAIL_APP=smartbookingcare@gmail.com
+EMAIL_APP_PASSWORD=awrz hwpr veyf hmgw
+EMAIL_APP=bookingdoctor3@gmail.com
